force-app/main/default/objects/lb065_Project__c/lb065_Project__c.object-meta.xml
<CustomObject>
    <label>Projeto</label>
    <nameField>
        <displayFormat>PRJ{0000000}</displayFormat>
        <label>Projeto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projetos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>