force-app/main/default/objects/lb065_Project__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projetos</relationshipLabel>
    <relationshipName>Projetos1</relationshipName>
    <type>Lookup</type>
</CustomField>