force-app/main/default/objects/lb065_Project__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Projetos</relationshipLabel>
    <relationshipName>Projetos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>