force-app/main/default/objects/lb065_Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>