force-app/main/default/objects/lb065_Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planejado</fullName>
            </value>
            <value>
                <fullName>Em Execução</fullName>
            </value>
            <value>
                <fullName>Em Homologação</fullName>
            </value>
            <value>
                <fullName>Go-Live</fullName>
            </value>
            <value>
                <fullName>Encerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>